--- a/PHP/proyectoPHP/css/estilo.css
+++ b/PHP/proyectoPHP/css/estilo.css
@@ -6,9 +6,25 @@ td.bat{
 }
 body{
     background-color: darkgoldenrod;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
-
-
+div.bat{
+  overflow: hidden;
+  background-color: #e9e9e9;
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+h1.bat{
+    color:black ;
+    background-color:silver;
+    text-align: center;
+}
 table{
     border-collapse: collapse;
 }
@@ -44,6 +60,3 @@ td.hiru{
 td.lau{
     background-color: greenyellow;
 }
-
-
-  
